Fri Jun 21 20:32:13 2013  Koichi Sasada  <ko1@atdot.net>

	* vm_eval.c (eval_string_with_cref): fix WB miss.

Fri Jun 21 20:15:49 2013  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/ruby.h: support write barrier protection for T_STRUCT.
	  Introduce the following C APIs:
	    * RSTRUCT_RAWPTR(st) returns pointer (do WB on your risk).
	      The type of returned pointer is (const VALUE *).
	    * RSTRUCT_GET(st, idx) returns idx-th value of struct.
	    * RSTRUCT_SET(st, idx, v) set idx-th value by v with WB.
	  And
	    * RSTRUCT_PTR(st) returns pointer with shady operation.
	      The type of returned pointer is (VALUE *).

	* struct.c, re.c, gc.c, marshal.c: rewrite with above APIs.

Fri Jun 21 19:38:37 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (BDIGMAX): Use BIGRAD.
	  (BIGLO): Use BDIGMAX.
	  (bigdivrem1): Ditto.
	  (bigor_int): Ditto.
	  (rb_big_or): Ditto.

Fri Jun 21 19:18:48 2013  Tanaka Akira  <akr@fsij.org>

	* pack.c (pack_pack): Move the implementation for 'c' directive after
	  pack_integer label.

Fri Jun 21 19:11:56 2013  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/ruby.h, re.c: support write barrier for T_REGEXP.

	   Note: T_MATCH object is also easy to support write barriers.
	         However, most of T_MATCH objects are short-lived objects.
	         So I skipped to support non-shady T_MATCH.

Fri Jun 21 18:56:58 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigsub_int): Use bdigit_roomof.
	  (bigadd_int): Ditto.
	  (bigand_int): Ditto.
	  (bigor_int): Ditto.
	  (bigxor_int): Ditto.

Fri Jun 21 17:56:25 2013  Koichi Sasada  <ko1@atdot.net>

	* benchmark/gc/gcbench.rb: fix summary of benchmark result notaton.

Fri Jun 21 16:38:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* ext/openssl/ossl_x509attr.c: change OSSL_X509ATTR_IS_SINGLE and
	  OSSL_X509ATTR_SET_SINGLE macros to use ->value.set rather than
	  ->set to fix compile failure

Fri Jun 21 15:26:45 2013  Koichi Sasada  <ko1@atdot.net>
